# geo_extensions

./: .flake8  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
geo_extensions/: __init__.py  checks.py  geospatial.py  transformations.py  transformer.py  types.py
geo_extensions/transformations/: __init__.py  cartesian.py  general.py  geodetic.py
src/satlib/: __init__.py  corner_coords.py  framing.py  geospatial.py
tests/: conftest.py  strategies.py  test_checks.py  test_corner_coords.py  test_enums.py  test_framing.py  test_geo_extensions.py  test_geospatial.py  test_transformations.py  test_transformer.py
tests/data/: OPERA_L2_RTC-S1_T114-243299-IW1_20230722T122534Z_20230818T184635Z_S1A_30_v0.4.wkt
