[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "geo-extensions"
version = "0.1.1"
description = ""
authors = ["Rohan Weeden <reweeden@alaska.edu>"]
license = "APACHE-2"
readme = "README.md"
packages = [{include = "geo_extensions"}]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
hypothesis = "^6.98.8"

[tool.isort]
profile = "black"
