[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "geo-extensions"
version = "0.4.0"
description = ""
authors = ["Rohan Weeden <reweeden@alaska.edu>"]
license = "APACHE-2"
readme = "README.md"
packages = [{include = "geo_extensions"}]

[tool.poetry.dependencies]
python = "^3.10"

pygeodesy = "^25.9.9"
shapely = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
hypothesis = "^6.98.8"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.16.1"
types-shapely = "^2.0.3"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
